--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "ext/googletest"]
-	path = ext/googletest
-	url = git://github.com/sfiera/googletest.git
-[submodule "ext/googlemock"]
-	path = ext/googlemock
-	url = git://github.com/sfiera/googlemock.git
 [submodule "ext/waf-sfiera"]
 	path = ext/waf-sfiera
 	url = git://github.com/sfiera/waf-sfiera.git
+[submodule "ext/gmock-waf"]
+	path = ext/gmock-waf
+	url = https://github.com/sfiera/gmock-waf.git
