--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "ext/waf-sfiera"]
-	path = ext/waf-sfiera
-	url = git://github.com/sfiera/waf-sfiera.git
-[submodule "ext/gmock-waf"]
-	path = ext/gmock-waf
-	url = https://github.com/sfiera/gmock-waf.git
+[submodule "ext/gmock-gyp"]
+	path = ext/gmock-gyp
+	url = https://github.com/sfiera/gmock-gyp.git
