--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/gmock-gyp"]
 	path = ext/gmock-gyp
 	url = https://github.com/sfiera/gmock-gyp.git
+[submodule "build/lib"]
+	path = build/lib
+	url = https://github.com/sfiera/gn-tools.git
