--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "ext/gmock-gyp"]
-	path = ext/gmock-gyp
+	path = ext/gmock
 	url = https://github.com/sfiera/gmock-gyp.git
 [submodule "build/lib"]
 	path = build/lib
