--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ language:  cpp
 matrix:
   include:
     - os:        osx
-      osx_image: xcode9.3
+      osx_image: xcode11.5
       env:
         - TARGET=mac TEST=test
 
-    - os:        osx
-      osx_image: xcode7.3
-      env:
-        - TARGET=mac TEST=test
+#   - os:        osx
+#     osx_image: xcode7.3
+#     env:
+#       - TARGET=mac TEST=test
 
     - os:        linux
       dist:      xenial
@@ -21,26 +21,26 @@ matrix:
       services:
         - docker
       before_install:
-        - docker run -d --name cosmic -v $(pwd):/libsfz -w /libsfz ubuntu:cosmic sleep infinity
+        - docker run -d --name focal -v $(pwd):/libsfz -w /libsfz ubuntu:focal sleep infinity
         - docker ps
       install:
         - $SH apt-get update
         - $SH apt-get install -y --no-install-recommends build-essential clang make python
       env:
-        - TARGET=linux TEST=test SH="docker exec cosmic"
+        - TARGET=linux TEST=test SH="docker exec focal"
 
     - os:        linux
       services:
         - docker
       before_install:
-        - docker run -d --name cosmic -v $(pwd):/libsfz -w /libsfz ubuntu:cosmic sleep infinity
+        - docker run -d --name focal -v $(pwd):/libsfz -w /libsfz ubuntu:focal sleep infinity
         - docker ps
       install:
         - $SH apt-get update
         - $SH apt-get install -y --no-install-recommends build-essential clang make python
         - $SH apt-get install -y --no-install-recommends mingw-w64 xvfb wine
       env:
-        - TARGET=win TEST=test-wine SH="docker exec cosmic"
+        - TARGET=win TEST=test-wine SH="docker exec -e DEBIAN_FRONTEND=noninteractive focal"
 
 script:
   - $SH ./configure -o $TARGET
